--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "http-server": "^0.9.0",
     "jquery": "^3.3.1",
     "moment": "^2.12.0",
+    "parse": "^1.11.0",
     "vue": "^2.2.2",
     "vue-date-picker": "^1.0.2",
     "vue-resource": "^1.0.3",
