--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "vue-resource": "^1.0.3",
     "vue-router": "^2.2.0",
     "vuex": "^2.0.0",
-    "vuex-router-sync": "^4.1.2"
+    "vuex-router-sync": "^4.1.2",
+    "xlsx": "^0.11.19"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
